--- a/store/templates/store/item.html
+++ b/store/templates/store/item.html
@@ -1,7 +1,34 @@
 {% extends 'store/base.html' %}
 
-{% block title %}{{item.name}} | {% endblock %}
+{% block title %} {{item.name}}| {% endblock %}
+{% block content %}
 
-{%block content %}
+<div class="container mt-4 mb-4">
+    <div class="row">
+        <div class="col-4">
+            <img src="{{item.image.url}}" alt="" class="rounded" width="100%">
+
+        </div>
+        <div class="col-8 p-4 rounded bg-light">+
+            <h1 class="mb-4 text-center">
+                {{ item.name }}
+            </h1>
+            <hr>
+            <h4><strong>Precio ${{ item.price }}
+            </strong></h4>
+            <h4><strong>vendedor ${{ item.created_by.username }}
+            </strong></h4>
+            {% if item.description %}
+            <p> {{item.description}}</p>
+            {% endif %}
+
+            <a href=""class="btn btn-dark">Contacta al vendedor</a>
+
+            
+
+        </div>
+    </div>
+</div>
 <h1>Item detail Page</h1>
+
 {% endblock %}
