--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -2,7 +2,11 @@
 {% block title%} Home| {%endblock%}
 {%block content %}
     <div class="mt-2 mb-4 px-4 py-2">
+        {% if request.user.is_authenticated %}
+        <h1 class="text-center mb-4">Nuevos Productos - {{request.user.username}}</h1>
+        {% else %}
         <h1 class="text-center mb-4">Nuevos Productos</h1>
+        {% endif %}
         <div class="container text-center">
             <div class="row justify-content-center">
                 {%for item in items%}
