--- a/store/templates/store/navigation.html
+++ b/store/templates/store/navigation.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a href="" class="nav-link active">
+                    <a href="{% url 'home' %}" class="nav-link active">
                         Home
                     </a>
                 </li>
@@ -16,11 +16,24 @@
                         Contact
                     </a>
                 </li>
+                {% if request.user.is_authenticated %}
                 <li class="nav-item">
-                    <a href="" class="nav-link active">
+                    <a href="{% url 'logout' %}" class="nav-link active">
+                        Logout
+                    </a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a href="{% url 'login' %}" class="nav-link active">
                         Login
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="{% url 'register' %}" class="nav-link active">
+                        Register
+                    </a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </div>
